# DL-Construction-Recommendation

./: QUICKSTART.md  README.md  pyproject.toml
examples/: README.md  example_building_spec.yaml  example_output.json  example_rules.json  example_rules_text.txt
src/: build_dataset.py  dataset_builder.py  run_inference.py  synthetic_text_gen.py  train_t5.py
src/baseline_generator/: __init__.py  cli.py  engine.py  parser.py  schema.py
tests/: test_cli.py  test_engine.py  test_parser.py  test_schema.py
